# robotica-atividade-02-scara

./: README.md
rosbags/ab1_2025_10_27/: metadata.yaml  rosbag2_2025_10_27-21_00_00_0.db3
rosbags/ab2_traj_demo/rosbag2_2025_11_17-19_25_31/: metadata.yaml  rosbag2_2025_11_17-19_25_31_0.db3
src/scara_dh_demo/: package.xml  setup.cfg  setup.py
src/scara_dh_demo/launch/: dh_motion.launch.py  traj_demo.launch.py
src/scara_dh_demo/resource/: scara_dh_demo
src/scara_dh_demo/scara_dh_demo/: dh_kin.py  dh_motion_demo.py  scara_traj_demo.py
