<package format="3">
  <name>scara_dh_demo</name>
  <version>0.0.1</version>
  <description>SCARA DH demo: FK/IK, motions, limits</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <!-- MUITO IMPORTANTE: ament_python como build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
